--- a/home_module/build.gradle
+++ b/home_module/build.gradle
@@ -11,7 +11,13 @@ android {
         versionCode 1
         versionName "1.0"
 
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [moduleName: project.getName()]
+            }
+        }
 
     }
 
@@ -33,4 +39,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.github.zhaozhengwu:BaseLibrary:1.0.2'
+    annotationProcessor "com.alibaba:arouter-compiler:1.1.3"
+    annotationProcessor "com.alibaba:arouter-compiler:1.1.4"
+    compile 'com.alibaba:arouter-api:1.2.2'
 }
